--- a/packages/sift/css/common.css
+++ b/packages/sift/css/common.css
@@ -15,6 +15,8 @@ html, body {
 #header {
   width: 100%;
   display: table;
+  border-bottom: 1px solid rgba(153,0,0,0.2);
+  padding-bottom: 3px;
 }
 .container {
   overflow: hidden;
@@ -22,13 +24,14 @@ html, body {
   width: 100%;
   position: fixed;
 }
-h3, h3>a {
-  color: #aaa;
+h3, h3 > a {
+  color: #990000;
   font-size: 1.2em;
   letter-spacing: 2px;
   font-weight: 200;
   text-align: center;
   text-decoration: none;
+  margin-top: 1em;
 }
 #header > h3 {
   text-align: left;
@@ -40,7 +43,8 @@ h3, h3>a {
 }
 .searchBox {
   margin-top: 10px;
-  margin-right: 10px;
+  margin-right: 15px;
+  padding-top: 6px;
 }
 .headerItem.right {
   float: right;
@@ -48,7 +52,8 @@ h3, h3>a {
 .searcher {
   border-radius: 4px;
   padding: 10px;
-  border: 1px solid #aaa;
+  top: -6px;
+  border: 1px solid rgba(153,0,0,0.2) !important;
   width: 300px;
   font-size: 14px;
 }
@@ -60,7 +65,7 @@ h3, h3>a {
   position: fixed;
 }
 h3, h3>a {
-  color: #aaa;
+  color: #990000;
   font-size: 1.2em;
   letter-spacing: 2px;
   font-weight: 200;
