--- a/packages/sift/css/common.css
+++ b/packages/sift/css/common.css
@@ -17,6 +17,7 @@ html, body {
   display: table;
   border-bottom: 1px solid rgba(153,0,0,0.2);
   padding-bottom: 3px;
+  height: 50px;
 }
 .container {
   overflow: hidden;
@@ -25,14 +26,19 @@ html, body {
   position: fixed;
 }
 h3, h3 > a {
+  
+}
+.header-title {
   color: #990000;
   font-size: 1.2em;
   letter-spacing: 2px;
   font-weight: 200;
   text-align: center;
   text-decoration: none;
-  margin-top: 1em;
+  margin-left: 7px;
+  display: inline;
 }
+
 #header > h3 {
   text-align: left;
   padding-left: 15px;
@@ -41,6 +47,17 @@ h3, h3 > a {
   display: table-cell;
   vertical-align: middle;
 }
+.headerItem > a {
+  text-decoration: none;
+}
+.headerItem.left {
+  padding-left: 20px;
+  padding-top: 10px;
+}
+.header-logo {
+  height: 20px;
+  display: inline;
+}
 .searchBox {
   margin-top: 10px;
   margin-right: 15px;
@@ -48,10 +65,12 @@ h3, h3 > a {
 }
 .headerItem.right {
   float: right;
+  padding-right: 20px;
+  padding-bottom: 7px;
 }
 .searcher {
   border-radius: 4px;
-  padding: 10px;
+  margin-bottom: -10px !important;
   top: -6px;
   border: 1px solid rgba(153,0,0,0.2) !important;
   width: 300px;
