--- a/packages/sift/css/lib/typeahead.css
+++ b/packages/sift/css/lib/typeahead.css
@@ -28,7 +28,7 @@
 }
 
 .tt-dropdown-menu {
-  width: auto;
+  width: 300px;
   padding: 8px 0;
   background-color: #fff;
   border: 1px solid #ccc;
