--- a/packages/sift/src/css/styles.css
+++ b/packages/sift/src/css/styles.css
@@ -20,8 +20,10 @@ body {
   /*position: fixed;*/
 }
 .page-content {
-  padding: 0 30px;
+/*  padding: 0 30px; */
   margin-bottom: 150px;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 .header-title {
   color: #990000;
@@ -115,6 +117,11 @@ body {
   background-color: #1092fe;
   color: #fff;
 }
+.result-item-id {
+  font-size: 10px;
+  color: #777;
+  margin-left: 5px;
+}
 
 .main-search {
   text-align: center;
@@ -179,7 +186,7 @@ body {
 .random-column-stats {
   position: absolute;
   z-index: 10000;
-  background-color: rgba(255,255,255,0.88);
+  background-color: rgba(255,255,255,0.95);
   height: 100%;
   display: table;
 }
@@ -192,6 +199,12 @@ body {
   position: relative;
   margin-bottom: 50px;
   height: 400px;
+/*  box-shadow: 0px 6px 10px -6px #aaa, 0px -6px 10px -6px #aaa;
+  -webkit-box-shadow: 0px 6px 10px -6px #aaa, 0px -6px 10px -6px #aaa;
+  -mox-box-shadow: 0px 6px 10px -6px #aaa, 0px -6px 10px -6px #aaa;*/
+  box-shadow: 0px 6px 10px -6px #aaa;
+  -webkit-box-shadow: 0px 6px 10px -6px #aaa;
+  -mox-box-shadow: 0px 6px 10px -6px #aaa;
 }
 .random-column-chart {
   display: table-cell;
@@ -252,6 +265,10 @@ body {
   font-size: 22px;
   color: #333333;
 }
+.summary-age {
+  color: #333333;
+  font-size: 15px;
+}
 
 #map {
   height: 100%;
@@ -292,11 +309,12 @@ body {
 
 .page-title {
   color: #aaa;
-  font-size: 1.7em;
+  font-size: 2em;
   letter-spacing: 2px;
   font-weight: 200;
   text-align: center;
   text-decoration: none;
+  text-transform: capitalize;
   padding: 15px;
 }
 .page-title a {
@@ -422,6 +440,59 @@ small, .small {
 }
 .outcrop.active {
   background: url(../img/noun_528_white.png) center/35px no-repeat;
+}
+
+.chart-row {
+  padding-bottom: 25px;
+}
+
+.prevalent-taxa-row {
+  background-color: #999999;
+  padding: 15px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  height: 90px;
+}
+
+.prevalent-taxa-container {
+  text-align: center;
+  display: table;
+  height: 100%;
+}
+
+.prevalent-taxa-container:first-of-type {
+  border-right: 1px solid whitesmoke;
+}
+
+.prevalent-taxa {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.prevalent-taxa > img {
+  filter: invert(1);
+  -webkit-filter: invert(1);
+  -ms-filter: 'progid:DXImageTransform.Microsoft.BasicImage(invert=1)';
+  height: 35px;
+}
+.prevalent-taxa > p {
+  color: #F5F5F5;
+  font-size: 0.8em;
+  font-weight: 200;
+  margin-top: 5px;
+}
+
+#prevalent-taxa-title {
+  color: #F5F5F5;
+  font-size: 1.2em;
+  margin-bottom: 0;
+}
+
+.normalize-link {
+  color: inherit;
+}
+.normalize-link:hover {
+  color: inherit;
 }
 
 
