--- a/packages/sift/src/css/styles.css
+++ b/packages/sift/src/css/styles.css
@@ -105,6 +105,24 @@ body {
   margin-top: -12px;
   cursor: pointer;
 }
+.autocomplete-hint {
+  padding: 15px;
+}
+.autocomplete-hint > p {
+  font-size: 12px;
+  color: #aaa;
+  letter-spacing: 1px;
+  font-weight: 300;
+}
+.autocomplete-hint > ul {
+  list-style: none;
+  color: #777;
+  font-weight: 200;
+  margin-left: -25px;
+}
+.autocomplete-hint > ul > li {
+  padding: 5px;
+}
 .hidden {
   display: none;
 }
