--- a/packages/sift/src/css/styles.css
+++ b/packages/sift/src/css/styles.css
@@ -11,6 +11,8 @@ body {
   border-bottom: 1px solid rgba(153,0,0,0.2);
   padding-bottom: 3px;
   height: 50px;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 .container {
   overflow: scroll;
