--- a/packages/sift/src/css/styles.css
+++ b/packages/sift/src/css/styles.css
@@ -85,6 +85,7 @@ body {
   border-radius: 4px;
   font-size: 14px;
   width: 100%;
+  -webkit-appearance: none;
 }
 .autocomplete-results {
   width: 100%;
