--- a/packages/sift/src/css/styles.css
+++ b/packages/sift/src/css/styles.css
@@ -27,6 +27,7 @@ body {
   margin-bottom: 150px;
   max-width: 1200px;
   margin: 0 auto;
+  overflow: hidden;
 }
 .header-title {
   color: #990000;
