--- a/packages/sift/src/css/styles.css
+++ b/packages/sift/src/css/styles.css
@@ -76,7 +76,15 @@ html, body, .react {
   padding-right: 30px;
   padding-bottom: 7px;
   width: 250px;
+  right: 5px;
   position: relative;
+}
+.autocomplete-mask {
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0,0,0,0.5);
+  position: absolute;
+  z-index: 999999;
 }
 .autocomplete-wrapper {
   /*width: 50%;
@@ -269,7 +277,7 @@ html, body, .react {
 .random-column {
   position: relative;
   margin-bottom: 50px;
-  height: 400px;
+  height: auto;
 /*  box-shadow: 0px 6px 10px -6px #aaa, 0px -6px 10px -6px #aaa;
   -webkit-box-shadow: 0px 6px 10px -6px #aaa, 0px -6px 10px -6px #aaa;
   -mox-box-shadow: 0px 6px 10px -6px #aaa, 0px -6px 10px -6px #aaa;*/
@@ -343,7 +351,7 @@ html, body, .react {
 }
 
 #map {
-  height: 100%;
+  height: 400px;
   width: 100%;
 }
 .chart-canvas-container {
@@ -902,6 +910,9 @@ small, .small {
 }
 
 @media(max-width: 768px) {
+  .leaflet-control-zoom {
+    display: none;
+  }
   .headerItem.right {
     width: 200px;
   }
@@ -912,18 +923,18 @@ small, .small {
     padding: 10px;
   }
   .random-column-stats {
-    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
   }
   .random-column-stats-table {
-    max-width: none;
-    display: inherit;
-    border: 0;
+    padding: 6px;
   }
-  .chart-row {
-    margin-top: 500px;
+  .random-column-stats {
+    width: 118px;
+  }
+  .big-number {
+    font-size: 16px;
   }
   .title {
     margin-bottom: 50px;
