Cancel pending map info requests

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -208,7 +208,7 @@ body {
   text-decoration: none;
 }
 
-.filter-title {
+#filter-title {
   padding-bottom: 0 !important;
   margin-bottom: -12px;
 }
