--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -218,6 +218,11 @@ body {
   padding-bottom: 0 !important;
   margin-bottom: -12px;
 }
+
+.about-section {
+  display: block;
+  padding-bottom: 15px;
+}
 @media(max-width: 850px) {
   .infoDrawer {
     max-width: 100%;
