Rework application of burwell filters

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -136,6 +136,9 @@ text {
 .infodrawer-grid {
   /* width: 100% !important; */
   overflow-y: scroll !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .infodrawer-content {
   min-height: 0;
