--- a/src/columns/main.styl
+++ b/src/columns/main.styl
@@ -8,3 +8,15 @@ h1
 
 svg#column-index-map
   background-color: black
+
+  path.graticule
+    stroke #aaa
+    stroke-width 1px
+    stroke-dasharray 1,1
+    fill none
+
+  path.land
+    fill #eee
+    stroke #aaa
+    stroke-width 1px
+    stroke-linecap round
