--- a/src/columns/main.styl
+++ b/src/columns/main.styl
@@ -8,7 +8,7 @@ h1
 
 svg#column-index-map
   background-color: black
-
+  width: 100%
   path.graticule
     stroke #aaa
     stroke-width 1px
@@ -20,3 +20,9 @@ svg#column-index-map
     stroke #aaa
     stroke-width 1px
     stroke-linecap round
+
+  column_color=lighten(dodgerblue,10%)
+  path.column
+    fill alpha(column_color, 10%)
+    stroke column_color
+    stroke-width 1.5px
