Make height dependent on width

--- a/src/columns/main.styl
+++ b/src/columns/main.styl
@@ -7,7 +7,7 @@ h1
     margin 1em 2em 0.5em
 
 svg#column-index-map
-  background-color: black
+  background-color: lighten(dodgerblue,70%)
   width: 100%
   path.graticule
     stroke #aaa
@@ -21,7 +21,7 @@ svg#column-index-map
     stroke-width 1px
     stroke-linecap round
 
-  column_color=lighten(dodgerblue,10%)
+  column_color=lighten(black,10%)
   path.column
     fill alpha(column_color, 10%)
     stroke column_color
