Stateful column hovering

--- a/src/columns/main.styl
+++ b/src/columns/main.styl
@@ -26,3 +26,5 @@ svg#column-index-map
     fill alpha(column_color, 10%)
     stroke column_color
     stroke-width 1.5px
+    &.hovered
+      fill alpha(column_color, 50%)
