Selecting columns works

--- a/src/columns/main.styl
+++ b/src/columns/main.styl
@@ -28,3 +28,5 @@ svg#column-index-map
     stroke-width 1.5px
     &.hovered
       fill alpha(column_color, 50%)
+    &.selected
+      fill alpha(column_color, 80%)
